2010-01-31  Sebastien Pouliot  <sebastien@ximian.com>

	* BasicIgnoreList.cs: Don't bail out of loops since the same 
	assembly, type or method could be found more than one time.
	* Runner.cs: Add a FIXME about rules who report defects at 
	TearDown

2010-01-27  Sebastien Pouliot  <sebastien@ximian.com>

	* ThreadModelAttribute.cs: Apply MarkEnumerationsAsSerializableRule

2009-08-13  Jesse Jones  <jesjones@mindspring.com>

	* BasicIgnoreList.cs: Fixed AddType so that it works correctly when
	multiple assemblies have the same type name.

2009-06-10  Jesse Jones  <jesjones@mindspring.com>

	* BasicIgnoreList.cs: IsIgnored methods now handle null targets.
	* Runner.cs: ignore list now works for defects reported during teardown.
	Added a TearDown method for unit tests.

2009-01-28  Jb Evain  <jbevain@novell.com>

	* AssemblyResolver.cs: remove the Resolve methods
	for types, fields and methods. That's now handled directly
	by Cecil.

2008-12-30  Jesse Jones  <jesjones@mindspring.com>

	* Bitmask.cs: Changed GetHashCode to use unchecked
	math.

2008-12-28  Sebastien Pouliot  <sebastien@ximian.com> 

	* Symbols.cs: Allow reports to include the source information when
	a defect is found wrt a method return type.

2008-12-28  Sebastien Pouliot  <sebastien@ximian.com>

	* BasicIgnoreList.cs: Add support to ignore assembly based on Name, 
	in addition to FullName, since the later include version numbers
	which change too often for an ignore-file to be useful.

2008-12-21  Cedric Vivier  <cedricv@neonux.com>

	* AssemblyResolver.cs: Fix bug with method definition resolution on
	constructors having an overload without parameter.

2008-12-02  Jesse Jones  <jesjones@mindspring.com>

	* Symbols.cs: Include the source line when GetSource is not called
	with a method. ExtractFirst now returns the first instruction with
	a sequence point instead of simply the first instruction.

2008-12-01  Jesse Jones  <jesjones@mindspring.com>
