@@ -1,3 +1,8 @@
+2010-05-10  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AssemblyResolver.cs: Apply CheckParametersNullityInVisibleMethods
+	Rule on public methods
+
 2010-01-31  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* BasicIgnoreList.cs: Don't bail out of loops since the same 
